# ancient-books

./: .gitignore  README.md  main.py  pyproject.toml
app/: celery.py  data.py  forms.py  settings.py  urls.py  views.py
books/: admin.py  models.py  tasks.py  urls.py  views.py
books/migrations/: 0001_initial.py
books/services/: ocr_service.py  translation_service.py
books/templates/: index.html  login.html  password_reset.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  privacy.html  register.html  terms.html
books/templates/accounts/: change_password.html  profile.html
books/templates/books/: book_detail.html  book_list.html  page_editor.html
books/templates/index/: hero.html  navbar.html  search.html
